--- a/src/Component/Style/about_idab/about.css
+++ b/src/Component/Style/about_idab/about.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=about.css.map */
+body {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  font-size: 1.1rem;
+  font-weight: 300;
+  color: #333;
+}/*# sourceMappingURL=about.css.map */
