--- a/src/Component/Style/home/home.css
+++ b/src/Component/Style/home/home.css
@@ -1,1 +1,43 @@
-/*# sourceMappingURL=home.css.map */
+.home_main .Header_paragrap {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.home_main .Header_paragrap h2 {
+  text-align: center;
+  padding: 14px;
+  font-weight: 600;
+  color: rgb(179, 212, 118);
+}
+.home_main .Header_paragrap p {
+  text-align: justify;
+  width: 1175px;
+  margin: 0 auto;
+  padding: 27px;
+  font-size: 20px;
+}
+.home_main .Header_paragrap .input {
+  width: 109px;
+  height: 46px;
+  font-size: 21px;
+  background: darkgray;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: 400px;
+}
+.home_main .corporate {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.home_main .corporate h2 {
+  text-align: center;
+  padding: 14px;
+  font-weight: 600;
+  color: rgb(179, 212, 118);
+}
+.home_main .corporate p {
+  text-align: justify;
+  width: 1175px;
+  margin: 0 auto;
+  padding: 27px;
+  font-size: 20px;
+}/*# sourceMappingURL=home.css.map */
