--- a/src/Component/Style/footer/footer.scss
+++ b/src/Component/Style/footer/footer.scss
@@ -1,10 +1,16 @@
-footer {
 
+footer {
     background: rgb(135, 135, 136);
     padding: 3rem 0;
     text-align: center;
-    font-size: 1rem;
+    font-size: 4rem;
     margin-top: 7rem;
+    .footer_logo {
+        font-size: 4rem;
+        font-weight: 500;
+        margin-bottom: 2rem;
+        display: inline-block;
+    }
     a {
         color: rgb(255, 255, 255);
         .permalinks {
@@ -16,12 +22,6 @@ footer {
             margin-left: 1.5rem;
         
         }
-    }
-    .footer_logo {
-        font-size: 2rem;
-        font-weight: 500;
-        margin-bottom: 2rem;
-        display: inline-block;
     }
     .footer_socials {
         display: flex;
@@ -45,13 +45,12 @@ footer {
     }
     .footer_copyright {
         margin-bottom: 4rem;
-        color: red;
-        font-size: 1rem;
+        color: rgb(255, 255, 255);
+        font-size: 3rem;
     }
+
+
 }
-
-
-
 
 
 /* ========== Media Queries (Medium Devices) =============*/
