--- a/src/Component/Style/home/home.css
+++ b/src/Component/Style/home/home.css
@@ -1,3 +1,19 @@
+.home_main .img_slider {
+  height: 90vh;
+  background-image: url(../assets/idab_profile.jpg);
+}
+.home_main .img_slider .banner-content .banner_text h1 {
+  text-align: center;
+  font-size: 80px;
+  text-transform: capitalize;
+  font-weight: 700;
+  line-height: 100px;
+}
+.home_main .img_slider .banner-content .banner_text h4 {
+  text-transform: capitalize;
+  font-size: 24px;
+  text-align: center;
+}
 .home_main .Header_paragrap {
   margin-top: 20px;
   margin-bottom: 20px;
