--- a/src/Component/Style/home/home.scss
+++ b/src/Component/Style/home/home.scss
@@ -2,8 +2,28 @@
 
 .home_main{
     .img_slider{
-
-    }
+            height: 90vh;
+            background-image: url(../assets/idab_profile.jpg);
+            .banner-content{
+                .banner_text{
+                    h1{
+                
+                        text-align: center;
+                        font-size: 80px;
+                        // color: $color-white;
+                        text-transform: capitalize;
+                        font-weight: 700;
+                        line-height: 100px;
+                    }
+                    h4{
+                        // color: $color-white;
+                        text-transform: capitalize;
+                        font-size: 24px;
+                        text-align: center;
+                    }
+                }
+            }
+        }
     .Header_paragrap{
         margin-top: 20px;
         margin-bottom: 20px;
