--- a/src/Component/Style/contact/css/style.css
+++ b/src/Component/Style/contact/css/style.css
@@ -371,6 +371,11 @@ h1, h2, h3, h4, h5, h6 {
   border-color: #333;
 }
 
+.contact-area {
+  background: rgb(216, 220, 224);
+  padding: 5px;
+  margin-bottom: 5px;
+}
 .contact-area .section-title h4 {
   text-transform: capitalize;
   font-size: 40px;
@@ -431,7 +436,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   margin-bottom: 30px;
-  margin-left: auto;
+  margin-left: 210px;
 }
 .contact-area .single-contact i {
   background-color: tomato;
@@ -439,4 +444,20 @@ h1, h2, h3, h4, h5, h6 {
   padding: 12px;
   border-radius: 50%;
   margin-right: 10px;
+}
+.contact-area .single-contact h4 {
+  text-transform: uppercase;
+  width: 400px;
+  font-size: 20px;
+  font-weight: 600;
+}
+.contact-area .single-contact h4 span {
+  display: block;
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: lowercase;
+  margin-top: 5px;
+}
+.contact-area .single-contact h4 span:last-child {
+  margin-bottom: 0;
 }/*# sourceMappingURL=style.css.map */
