--- a/src/Component/Style/home/home.scss
+++ b/src/Component/Style/home/home.scss
@@ -2,7 +2,7 @@
 
 .home_main{
     .img_slider{
-            height: 90vh;
+            height: 85vh;
             background-image: url(../assets/idab_profile.jpg);
             .banner-content{
                 .banner_text{
@@ -14,6 +14,7 @@
                         text-transform: capitalize;
                         font-weight: 700;
                         line-height: 100px;
+                        padding-top: 190px;
                     }
                     h4{
                         // color: $color-white;
